[metadata]
name = fastapi-oauth2
version = attr: fastapi_oauth2.__version__
author = Artyom Vancyan
author_email = artyom@pysnippet.org
description = Easy to setup OAuth2 authentication with support for several auth providers.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation=https://github.com/pysnippet/fastapi-oauth2/
    Source Code=https://github.com/pysnippet/fastapi-oauth2/
keywords =
    python
    sso
    auth
    login
    oauth
    oauth2
    social
    fastapi
    allauth
    security
    middleware
    authentication
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Framework :: FastAPI
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages =
    fastapi_oauth2
install_requires =
    fastapi>=0.68.1
    httpx>=0.22.0
    oauthlib>=3.2.2
    python-jose>=3.3.0
    social-auth-core>=4.4.2
    starlette>=0.19.1
include_package_data = yes
python_requires = >=3.6
package_dir =
    =src
zip_safe = no